# cms-backend

./: .env  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
migrations/2024-07-16-073217_create_agencies/: down.sql  up.sql
migrations/2024-07-19-030951_create_websites/: up.sql
src/: app_state.rs  lib.rs  main.rs  router.rs  schema.rs
src/models/: agencies.rs  agency.rs  mod.rs  website.rs
src/routes/: mod.rs
src/routes/agency/: create_agency.rs  get_agencies.rs  mod.rs
src/routes/check_health/: ping.rs
src/routes/website/: create_website.rs  get_websites.rs  mod.rs
src/utilities/: app_error.rs  db_connection.rs  mod.rs
