[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
cargo-watch = "8.5.2"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.1.6", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["bb8", "postgres"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
